# nlp-course-itmo

./: README.md
hw1/: README.md  hw1.ipynb  pyproject.toml
hw2/: .gitignore  README.md  hw2.ipynb  pyproject.toml
hw2/licenses/: tqdm_LICENSE
hw3/: README.md  hw3.ipynb  pyproject.toml
hw4/: .gitignore  README.md  hw4.ipynb  pyproject.toml
hw5/: .gitignore  README.md  hw5.ipynb  pyproject.toml
hw5/licenses/: Pymorphy2_LICENSE
hw6/: README.md  hw6.ipynb  pyproject.toml
hw7/: .gitignore  README.md  hw7.ipynb  pyproject.toml
