[tool.poetry]
name = "hw1"
version = "1.0.0"
description = ""
authors = ["Daniel Kopecky <danielkpoecky@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
corus = "^0.10.0"
nltk = "^3.8.1"
tweet-preprocessor = "^0.6.0"
pymorphy2 = "^0.9.1"
gdown = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
