[tool.poetry]
name = "hw4"
version = "1.0.0"
description = "HW4 - ITMO University Deep Learning and NLP course"
authors = ["Daniel Kopecky <danielkopecky@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
numpy = "1.23.0"
torch = "^2.1.0"
gensim = "^4.3.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
