[tool.poetry]
name = "hw5"
version = "1.0.0"
description = "HW5 - ITMO University Deep Learning and NLP course"
authors = ["Daniel Kopecky <danielkopecky@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"
pandas = "^2.1.0"
corus = "^0.10.0"
gensim = "^4.3.2"
tqdm = "^4.66.1"
nltk = "^3.8.1"
pymorphy2 = "^0.9.1"
pyldavis = "^3.4.1"
protobuf = "3.20.*"
bigartm = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
