[tool.poetry]
name = "hw6"
version = "1.0.0"
description = "HW6 - ITMO University Deep Learning and NLP course"
authors = ["Daniel Kopecky <danielkopecky@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
jupyter = "^1.0.0"
transformers = "^4.35.0"
datasets = "^2.14.6"
accelerate = "^0.24.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
pandas = "^2.1.2"
ipython = "^8.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
